// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-simple-toast-legacy #render should render alert simple toast 1`] = `
<gux-simple-toast-legacy accent="alert">
  <template shadowrootmode="open">
    <div class="gux-icon gux-alert">
      <slot name="icon">
      </slot>
    </div>
    <gux-truncate class="gux-message" max-lines="2">
      <slot name="message">
      </slot>
    </gux-truncate>
    <gux-dismiss-button class="gux-dismiss" position="inherit">
    </gux-dismiss-button>
  </template>
  <gux-icon slot="icon" icon-name="user-add" decorative="">
  </gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast-legacy>
`;

exports[`gux-simple-toast-legacy #render should render neutral simple toast 1`] = `
<gux-simple-toast-legacy accent="neutral">
  <template shadowrootmode="open">
    <div class="gux-icon gux-neutral">
      <slot name="icon">
      </slot>
    </div>
    <gux-truncate class="gux-message" max-lines="2">
      <slot name="message">
      </slot>
    </gux-truncate>
    <gux-dismiss-button class="gux-dismiss" position="inherit">
    </gux-dismiss-button>
  </template>
  <gux-icon slot="icon" icon-name="user-add" decorative="">
  </gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast-legacy>
`;

exports[`gux-simple-toast-legacy #render should render positive simple toast 1`] = `
<gux-simple-toast-legacy accent="positive">
  <template shadowrootmode="open">
    <div class="gux-icon gux-positive">
      <slot name="icon">
      </slot>
    </div>
    <gux-truncate class="gux-message" max-lines="2">
      <slot name="message">
      </slot>
    </gux-truncate>
    <gux-dismiss-button class="gux-dismiss" position="inherit">
    </gux-dismiss-button>
  </template>
  <gux-icon slot="icon" icon-name="user-add" decorative="">
  </gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast-legacy>
`;

exports[`gux-simple-toast-legacy #render should render warning simple toast 1`] = `
<gux-simple-toast-legacy accent="warning">
  <template shadowrootmode="open">
    <div class="gux-icon gux-warning">
      <slot name="icon">
      </slot>
    </div>
    <gux-truncate class="gux-message" max-lines="2">
      <slot name="message">
      </slot>
    </gux-truncate>
    <gux-dismiss-button class="gux-dismiss" position="inherit">
    </gux-dismiss-button>
  </template>
  <gux-icon slot="icon" icon-name="user-add" decorative="">
  </gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast-legacy>
`;
